--- a/event_create_field_set.html
+++ b/event_create_field_set.html
@@ -33,11 +33,11 @@
       		<input autocomplete='off' id="id_event_city" type="text" name="event_city" />
       	</div>
         <div class="input-text ak-input-type-event input-postal">
-      		<label for="id_event_postal">{% filter ak_text:"field_postal" %}Postal{% endfilter %} {% filter ak_text:"general_optional" %}(Optional){% endfilter %}</label>
+      		<label for="id_event_postal">{% filter ak_text:"field_postal" %}Postal{% endfilter %} {% filter ak_text:"general_optional" %}(Optional, this helps us locate your event on the map at 350.org/get-involved){% endfilter %}</label>
       		<input autocomplete='off' id="id_event_postal" type="text" name="event_postal" />
       	</div>
         <div class="input-text ak-input-type-event input-zip">
-      		<label for="id_event_zip">{% filter ak_text:"field_postal" %}Postal/ZIP{% endfilter %}</label>
+      		<label for="id_event_zip">{% filter ak_text:"field_postal" %}Postal/ZIP (This helps us locate your event on the map at 350.org/get-involved){% endfilter %}</label>
       		<input autocomplete='off' id="id_event_zip" type="text" name="event_zip" />
       	</div>
 
