Testing a postal code fix

--- a/donate.html
+++ b/donate.html
@@ -362,7 +362,7 @@
 {% if page.allow_international %}
 					<div>
 						<div class="input-text ak-input-type-user ak-intl-billing-fields">
-							<label for="id_postal">{% filter ak_text:"field_postal" %}Postal Code{% endfilter %}</label>
+							<label for="id_postal">{% filter ak_text:"field_postal" %}Postal Code (this helps us locate your event on the map at 350.org/get-involved){% endfilter %}</label>
 							<input id="id_postal" type="text" name="postal" size="10">
 						</div>
 							<div class="input-text ak-input-type-user ak-intl-billing-fields">
