fix: remove page tag from afteraction-share.html

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -2,7 +2,7 @@
 Custom template for same-page post-AJAX submit share ask.
 {% endcomment %}
 
-{{page}}
+<!-- {{page}} -->
 {% load actionkit_tags %}
 
 {% if page.custom_fields.after_action_next_step != "page-redirect" %}
