Hide venue if webinar event

--- a/event_attend.html
+++ b/event_attend.html
@@ -99,13 +99,13 @@
 		{% endif %}
 			</div>
 			<div class="event-location text-large2 text-style-lead2 icon-before" data-icon="&#xe907;">
-		{% if campaign.show_venue and event.venue %}
+		{% if campaign.show_venue and event.venue and not page.custom_fields.iswebinar == 'Yes' %}
 				<span class="event-venue">{{ event.venue }}</span><br>
 		{% endif %}
-		{% if campaign.show_address1 %}
+		{% if campaign.show_address1 and not page.custom_fields.iswebinar == 'Yes'  %}
 				<span class="event-address1">{{ event.address1 }}</span><br>
 		{% endif %}
-		{% if campaign.show_city or campaign.show_state or campaign.show_zip %}
+		{% if campaign.show_city or campaign.show_state or campaign.show_zip and not page.custom_fields.iswebinar == 'Yes'  %}
 			{% if campaign.show_zip %}
 				<span class="event-city-etc">{{ event.city_etc }}</span>
 			{% else %}
