--- a/event_attend.html
+++ b/event_attend.html
@@ -105,6 +105,7 @@
 		{% if campaign.show_address1 and page.custom_fields.iswebinar != 'Yes'   %}
 				<span class="event-address1">{{ event.address1 }}</span><br>
 		{% endif %}
+		{{page.custom_fields.iswebinar != 'Yes' }}
 		{% if campaign.show_city or campaign.show_state or campaign.show_zip and page.custom_fields.iswebinar != 'Yes'  %}
 			{% if campaign.show_zip %}
 				<span class="event-city-etc">{{ event.city_etc }}</span>
