--- a/donate.html
+++ b/donate.html
@@ -1841,6 +1841,7 @@
         };
         actionkit.donations.initClient('{{ pp.client_token }}', options);
         // read by 3-step validation
+        console.log(err, "Error is here")
         actionkit.donations.skip_cc_validation = true;
         actionkit.donations.vzero = true;
       $(".hosted-field.braintree-hosted-fields-invalid").prev().css("background-color", "#fff0d4");
