Add initial meetings flow

--- a/event_create.html
+++ b/event_create.html
@@ -87,7 +87,7 @@
 
 }
 
-.zoom-webinar-btn {
+.zoom-btn {
   background: #4285f4;
   color: white;
   font-size: 14px;
@@ -99,7 +99,7 @@
   border: none;
 }
 
-.zoom-webinar-btn:focus{
+.zoom-btn:focus{
   outline: none;
 }
 
@@ -119,6 +119,7 @@
 .full-length {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .half-full {
@@ -127,6 +128,12 @@
 
 #id_webinar_timezone{
   padding: 0.4em 0.5em
+}
+
+.underline {
+  text-decoration: underline;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 </style>
