--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -1,27 +1,40 @@
 {% load actionkit_tags %}
 <!--Zoom Webinar Section -->
 <div class="input-textarea ak-input-type-event id_event_public_description margin-bottom-none">
-<label for="id_event_public_description">{% filter ak_text:"event_create_field_label_description" %}Webinar Details{% endfilter %}</label>
+<label for="id_event_public_description">{% filter ak_text:"event_create_field_label_description" %}Virtual Event Details{% endfilter %}</label>
     <p class="text-small opacity-50">
-        This webinar link will be prefilled into the venue section and be used to access the event.
+        This zoom virtual event link will be prefilled into the venue section and be used to access the event.
     </p>
+    {% comment %} <div class="full-length">
+      <button class="zoom-btn half-full">Add Meeting</button>
+      <span> or </span>
+      <button class="zoom-btn half-full">Add Webinar</button>
+    </div> {% endcomment %}
 <fieldset id="webinar-details">
     <div class="full-length">
     <div class="input-text ak-input-type-event input-address half-full">
-        <label for="id_webinar_duration">{% filter ak_text:"webinar_duration"|capfirst %}Webinar Duration (In Minutes){% endfilter %}</label>
+        <label for="id_webinar_duration">{% filter ak_text:"webinar_duration"|capfirst %}Duration (In Minutes){% endfilter %}</label>
         <select id="id_webinar_duration" type="number" min="30" max="120" name="webinar_duration">
         </select>
     </div>
     <div class="input-text ak-input-type-event input-address half-full">
-        <label for="id_webinar_timezone">{% filter ak_text:"webinar_timezone"|capfirst %}Webinar Timezone{% endfilter %}</label>
+        <label for="id_webinar_timezone">{% filter ak_text:"webinar_timezone"|capfirst %}Timezone{% endfilter %}</label>
         <input id="id_webinar_timezone" placeholder="Select timezone here..." type="text" min="30" max="120" name="webinar_timezone"/>
     </div>
     </div>
     {% if not update %}
-    <button class="zoom-webinar-btn" id="add-webinar-link">Add Webinar Link</button>
+    <button class="zoom-btn" id="add-webinar-link">Add Webinar Link</button>
+    <button class="zoom-btn" id="add-meeting-link">Add Meeting Link</button>
+    <p class="text-small opacity-80 underline" id="toggle-meeting">
+        Add Meeting Instead?
+    </p>
+    <p class="text-small opacity-80 underline" id="toggle-webinar">
+        Add Webinar Instead?
+    </p>
     {% endif %}
     <ul id="webinar-errors"></ul>
 </fieldset>
+</div>
     <div class="section-inner">
         <div id="zoom-success">
 
@@ -35,12 +48,35 @@
     <script>
         $(function() {
         // Hide any errors first
+        // Hide toggle webinar and add meeting first
+        $("#toggle-webinar").hide();
+        $("#add-meeting-link").hide();
+        // If meeting clicked, change text
+        $("#toggle-meeting").on("click", (e)=>{
+          $("#add-webinar-link").hide();
+          $("#add-meeting-link").show();
+          $("#toggle-webinar").show();
+          $("#toggle-meeting").hide();
+        });
+
+        $("#toggle-webinar").on("click", (e)=>{
+          $("#add-webinar-link").show();
+          $("#add-meeting-link").hide();
+          $("#toggle-webinar").hide();
+          $("#toggle-meeting").show();
+        });
+
+
+
         $("#webinar-errors").hide();
         // API CALL
         const zoomDetails = $("#webinar-details");
         const webinarErrors = $("#webinar-errors");
         const zoomSuccess = $("#zoom-success");
-        function makeAPICall(payload){
+        function makeAPICall(payload, isMeeting = false){
+            const baseURL = 'https://zaki-server.herokuapp.com/api/v1/';
+            let fetchURL = isMeeting ? 'meetings' : 'webinars';
+            fetchURL = `${baseURL}${fetchURL}`;
             const token = localStorage.getItem("token");
             if(!token){
                 console.log("No JWT token found")
@@ -56,8 +92,8 @@
                 },
                 body: JSON.stringify(payload)
             };
-
-            fetch(`https://zaki-server.herokuapp.com/api/v1/webinars`, options)
+            // https://zaki-server.herokuapp.com/api/v1/webinars
+            fetch(fetchURL, options)
             .then(response=>{
                 if(response.ok){
                     webinarErrors.hide();
@@ -259,6 +295,42 @@
                   agenda
               };
               makeAPICall(payload);
+            }  
+        });
+        // Add Meeting Link
+        $("#add-meeting-link").on("click", event=>{
+            event.preventDefault();
+            const timezone = $("#id_webinar_timezone").val();
+            const duration = $("#id_webinar_duration").val();
+            const agenda = $("#id_event_public_description").val();
+            const topic = $("#id_event_title").val().trim();
+            const date = $("#id_event_starts_at_date").val();
+            const time = $("#id_event_starts_at_time").val();
+            const amPm = $("#id_event_starts_at_ampm").val();
+            const dateFormat = moment(date, "MM-D-YYYY").format("YYYY-MM-DD");
+            const start_time = moment(`${dateFormat} ${time}:00 ${amPm}`, 'YYYY-MM-DD hh:mm:ss A').format('HH:mm:ss');
+            const start_date = moment(`${dateFormat} ${time}:00 ${amPm}`, 'YYYY-MM-DD hh:mm:ss A').format('YYYY-MM-DD');
+            const zoomStartTime = `${start_date}T${start_time}`;
+            // Check errors
+            let hasErrors = errors.length > 0;
+            if(hasErrors){
+              resetErrors()
+            }
+            errors = validateZoomPayload(topic, agenda, time, date, timezone);
+            if(errors.length){
+              showWebinarErrors(errors);
+            } else {
+              $("#webinar-errors").hide()
+              const payload = {
+                  topic,
+                  type: 2, // Zoom Docs req.
+                  start_time: zoomStartTime,
+                  duration,
+                  timezone: timezonesList.filter(t=>t.name === timezone)[0].id,
+                  password: generateZoomWebinarPassword(4),
+                  agenda
+              };
+              makeAPICall(payload, true);
             }  
         });
     });
