Add in comments

--- a/event_create.html
+++ b/event_create.html
@@ -130,6 +130,9 @@
   padding: 0.4em 0.5em
 }
 
+/*
+=== THis is for the underline section. move this to a constants file
+*/
 .underline {
   text-decoration: underline;
   cursor: pointer;
