--- a/wrapper.html
+++ b/wrapper.html
@@ -188,7 +188,7 @@
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://act.350.org/resources/actionkit.js"></script>
-	<!--Timepicker JS here-->
+	<!--Timepicker JS-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 	<!--[if lte IE 9]>
 	<link href="https://dbqvwi2zcv14h.cloudfront.net/images/ak-v3-ie9.css" rel="stylesheet" type="text/css">
