removed dup if style on paypal button

--- a/donate.html
+++ b/donate.html
@@ -585,7 +585,7 @@
                 </svg>
               </div>
 
-              <div class="payments-title {% if page.custom_fields.donation_payment_type_appearance == 'Y' %}payment-title-button{% endif %} paypal-title {% if page.custom_fields.donation_payment_type_appearance == 'Y' %}payment-title-button{% endif %}">
+              <div class="payments-title {% if page.custom_fields.donation_payment_type_appearance == 'Y' %}payment-title-button{% endif %} paypal-title">
                 <svg width="75" height="40">
                   <image href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
                 </svg>
