added hover to payment type buttons

--- a/donate.html
+++ b/donate.html
@@ -53,6 +53,9 @@
   margin: 0 6px;
   padding: 3px 0;
 }
+.payment-title-button:hover {
+  border-color: #0f81e8;
+}
 
 .payment-title-button:first-of-type {
   margin-left: 0;
