--- a/donate.html
+++ b/donate.html
@@ -842,7 +842,7 @@
                 total += parseFloat(other);
         }
 
-        var new_total = total == 0 ? "" : "" + total.toFixed(2);
+        var new_total = total == 0 ? "" : "" + (total % 1 != 0 ? total.toFixed(2) : total.toFixed(0));
         if (new_total != $('#total').html() ) {
             $('.ak-donation-total-amount').html(new_total);
         }
