--- a/wrapper.html
+++ b/wrapper.html
@@ -229,7 +229,7 @@ actionkit.forms.initForm('act');
 </script>
 
 {% endif %}
-<div class="clear" /></div>
+<div class="clear" ></div>
 
 {% comment %}
 -------------
