--- a/donate.html
+++ b/donate.html
@@ -94,6 +94,10 @@ iframe[width="1"][height="1"] {
   margin: 0;
 }
 
+.ak-multi-currency select::-ms-expand {
+    display: none;
+}
+
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
