--- a/donate.html
+++ b/donate.html
@@ -98,6 +98,10 @@ iframe[width="1"][height="1"] {
     display: none;
 }
 
+/* fix cut off on some browsers on hosted fields */
+.hosted-field {
+  height: 55px;
+}
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
