--- a/thanks.html
+++ b/thanks.html
@@ -16,13 +16,13 @@
 		{{ action.order.currency }} currency used, like "USD" <br>
 		{{ action.order.total_converted }} rough USD equivalent of the donation <br>
 
-		{% remember 10 as amt %}
+		{% with amt="10" %}  
 
 		Suggestions: <br>
-		{% (amt / 3)|floatformat %}
-		{% ((amt / 3) * 2)|floatformat %}
-		{% amt %}
-		{% endif %}
+			{{ (amt / 3)|floatformat }}
+			{{ ((amt / 3) * 2)|floatformat }}
+			{{ amt }}
+			{% endif %}
 		</div>
 		<form name="taf" method="POST" action="/update_action/" accept-charset="utf-8">
 			<input type="hidden" name="utf8" value="&#x2714;" />
