thank you upsell + param for currency

--- a/donate.html
+++ b/donate.html
@@ -1803,6 +1803,28 @@ iframe[width="1"][height="1"] {
     });
 		{% endif %}
 
+
+    // check for currency param and set default
+    var getUrlParameter = function (sParam) {
+        var sPageURL = window.location.search.substring(1),
+            sURLVariables = sPageURL.split('&'),
+            sParameterName,
+            i;
+
+        for (i = 0; i < sURLVariables.length; i++) {
+            sParameterName = sURLVariables[i].split('=');
+
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+            }
+        }
+    };
+    $(function() {
+      if (getUrlParameter('currency')) {
+        $('#id_currency_'+getUrlParameter('currency')).attr('selected', true)
+        $('#ak-currency-switcher').trigger('change')
+      }
+		});
 //-->
 </script>
 
