--- a/thanks.html
+++ b/thanks.html
@@ -19,6 +19,7 @@
 	}
 	.upsell_other_amt {
 		display: flex;
+		margin: 10px;
 	}
 	.upsell_other_amt input {
 		width: 60%;
@@ -28,7 +29,10 @@
 	}
 	.upsell_other_amt button {
 		width: 40%;
-  	border-radius: 0 1.4em 1.4em 0;
+		border-radius: 0 1.4em 1.4em 0;
+		min-width: 155px;
+		padding-left: 10px;
+		padding-right: 10px;
 	}
 </style>
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
