--- a/thanks.html
+++ b/thanks.html
@@ -50,6 +50,14 @@
 					var currency = 'USD';
 					var total = '10';
 					var maxDonation = 500;
+					var currencySymbols = {
+						"AUD": "AUD",
+						"BRL": "R$",
+						"CAD": "CAD",
+						"EUR": "€",
+						"GBP": "£",
+						"USD": "$",
+					}
 					
 					{% if action.order.currency %}
 					currency = '{{action.order.currency}}';
@@ -94,6 +102,8 @@
 					$('body').on('click', '#other_amt_btn', function(e){
 						window.location.href = url + '&amount='+$('#other_amt').val()
 					});
+
+					$('#other_symbol').html(currencySymbols[currency])
 					 
 					// used to test
 					// $('#test_no').val(total)
@@ -117,6 +127,7 @@
 			 <div class="upsell_wrap">
 					<div id="suggestions"></div>
 					<div class="upsell_other_amt">
+						<label id="other_symbol">$</label>
 						<input type="number" id="other_amt">
 						<button id="other_amt_btn" class="button">Give Monthly</button>
 					</div>
