--- a/thanks.html
+++ b/thanks.html
@@ -58,13 +58,13 @@
 		{% if page.custom_fields.thank_you_page_show_upsell == 'Y' %}
 			<script>
 				$(function() {
-					var currency = 'USD';
+					var currency = 'CAD';
 					var total = '10';
 					var maxDonation = 500;
 					var currencySymbols = {
-						"AUD": "AUD",
+						"AUD": "$",
 						"BRL": "R$",
-						"CAD": "CAD",
+						"CAD": "$",
 						"EUR": "€",
 						"GBP": "£",
 						"USD": "$",
