Adds regional information

--- a/event_create.html
+++ b/event_create.html
@@ -16,6 +16,11 @@
 
 .ak-err{
   color:#dd8902;}
+.highlight{
+  color: #4285f4;
+  font-weight: bold;
+
+}
 .section-header{
   border-bottom:1px dotted;
   color:rgba(21,36,43,0.5);
@@ -124,6 +129,10 @@
 
 .half-full {
   width: 45%;
+}
+
+.third-full {
+  width: 30%;
 }
 
 #id_webinar_timezone{
