Multiple zoom accounts

--- a/event_create.html
+++ b/event_create.html
@@ -139,6 +139,12 @@
   padding: 0.4em 0.5em
 }
 
+#id_webinar_email{
+  padding: 5px
+}
+
+
+
 /*
 === THis is for the underline section. move this to a constants file
 */
