fix donate min-height bug

--- a/donate.html
+++ b/donate.html
@@ -177,6 +177,9 @@ iframe[width="1"][height="1"] {
       #site-footer {
         display: none;
       }
+      section.section:only-of-type {
+        min-height: 100vh;
+      }
       #donation-splash-skip {
         background: none;
         border: none;
