--- a/donate.html
+++ b/donate.html
@@ -196,10 +196,28 @@ iframe[width="1"][height="1"] {
     </style>
     <script>
       $(function(){
+        function sendResizeEvent() {
+          var pageHeight = $('body').height();
+          window.parent.postMessage({
+            'type': 'splash-modal-resize',
+            'pageHeight': pageHeight
+          }, '*');
+        }
+
         $('#donation-splash-next').on('click', function(){
           $('.ak-donate-three-step, #action-toc').show();
+          sendResizeEvent();
         });
-        // click listener for close button, send postMessage to iframe parent
+        $('.close-donation-splash-modal').on('click', function(){
+          // send close modal post message
+          window.parent.postMessage({
+            'type': 'close-splash-modal'
+          }, '*');
+        });
+        $(window).resize(function() {
+          sendResizeEvent();
+        });
+        sendResizeEvent();
       });
     </script>
   {% endif %}
