hide jump to donate button

--- a/donate.html
+++ b/donate.html
@@ -187,6 +187,9 @@ iframe[width="1"][height="1"] {
         font-size: 1.25rem;
         display: block;
       }
+      #jump-to-form {
+        display: none;
+      }
       @media screen and (min-width:720px) {
         #action-lead.bg-blue-fade {
           background-color: transparent;
