donate page edits

--- a/donate.html
+++ b/donate.html
@@ -177,6 +177,9 @@ iframe[width="1"][height="1"] {
       #site-footer {
         display: none;
       }
+      #action-lead {
+        display: block;
+      }
       section.section:only-of-type {
         min-height: 100vh;
       }
