--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -410,7 +410,7 @@
               $("#webinar-errors").hide()
               const payload = {
                   topic,
-                  type: 2, // Zoom Docs req.
+                  type: 2,
                   start_time: zoomStartTime,
                   duration,
                   timezone: timezonesList.filter(t=>t.name === timezone)[0].id,
