fix media queries

--- a/donate.html
+++ b/donate.html
@@ -193,17 +193,17 @@ iframe[width="1"][height="1"] {
         text-decoration: underline;
         font-size: 15px;
       }
-      @media screen and (max-width:474px) {
+      @media screen and (min-width:474px) {
         #donation-splash-skip {
           margin-left: 15px;
         }
       }
-      @media screen and (max-width:900px) {
+      @media screen and (min-width:900px) {
         #donation-splash-skip {
           margin-left: 0;
         }
       }
-      @media screen and (max-width:1060px) {
+      @media screen and (min-width:1060px) {
         #donation-splash-skip {
           margin-left: 15px;
         }
