Donation splash page (#252)
* add buttons

* add hide/show functionality

* add thank you page button. Hide footer etc on donate page

* fix donate min-height bug

* add resize modal post message

* fix wrong height bug

* fix wrong height

* fix wrong height

* add splash ready event

* hide jump to donate button

* add resize splash event to ty page

* fix height

* height fix

* comment out console log

* donate page edits

* revert to body height

* hide buttons on click

* hide buttons

* debug

* debug

* debug

* remove resize

* 350 feedback

* 350 feedback

* 350 feedback

* fix splash close btn on ty page styling

* stop step animation

* fix syntax err

* add template strings

* Are you happy for us to use cookies

* ty page close button styling

* add padding to action-lead

* remove ty button background

* fix padding on mobile

* remove 'or' on splash page, make buttons inline

* fix media queries

* add fix to stop donation errors getting redirected to the error page

* remove referer id hidden field

Co-authored-by: Kimani Ndegwa <kimani@pave.solutions>

--- a/thanks.html
+++ b/thanks.html
@@ -97,6 +97,49 @@
 </style>
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
+		{% if page.custom_fields.donation_splash_page == 'Y' %}
+		<button id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal button-alternate">{% filter ak_text:"donate_splash_ty_close_button" %}Continue to 350.org{% endfilter %}</button>
+		<style>
+			#site-footer {
+				display: none;
+			}
+			section.section:only-of-type {
+				min-height: 100vh;
+			}
+			#ty-splash-close {
+				margin-left: auto;
+				display: block;
+			}
+			#ty-splash-close {
+				margin-right: 1%;
+			}
+			
+			@media only screen and (max-width:719px) {
+				#ty-splash-close {
+					width: 98%;
+				}
+			}
+			@media only screen and (min-width:720px) and (max-width:900px) {
+				#ty-splash-close {
+					margin-right: 2%;
+				}
+			}
+			@media screen and (min-width: 900px) {
+				#ty-splash-close {
+					margin-right: 1%;
+				}
+			}
+		</style>
+		<script>
+		$(function(){
+			$('.close-donation-splash-modal').on('click', function(){
+				window.parent.postMessage({
+					'type': 'close-splash-modal'
+				}, '*');
+			});
+		});
+		</script>
+		{% endif %}
 		<form class="ak-form dummy" name="act" method="POST" action="/act/" accept-charset="utf-8">
 		<input type="hidden" name="page" value="{{ page.name }}" />
 		{% include "./progress_meter.html" %}
