--- a/donate.html
+++ b/donate.html
@@ -164,7 +164,103 @@ iframe[width="1"][height="1"] {
 		<div {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
 			{% include_tmpl form.ask_text %}
 		</div>
-	</div>
+  </div>
+  {% if page.custom_fields.donation_splash_page == 'Y' %}
+    <div class="splash-buttons">
+      <button class="button button-primary arrow-right" id="donation-splash-next">{% filter ak_text:"donate_splash_next_button" %}Donate Now{% endfilter %}</button>
+      <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">{% filter ak_text:"donate_splash_skip_button" %}Continue to 350.org{% endfilter %}</button>
+    </div>
+    <style>
+      .ak-donate-three-step,
+      #action-toc,
+      #donation-other,
+      #site-footer {
+        display: none;
+      }
+      #action-lead {
+        display: block; /* stop header and paragraph from jumping when showing donate page */
+        padding: 16vw 15px;
+      }
+      section.section:only-of-type {
+        min-height: 100vh;
+      }
+      #donation-splash-skip {
+        background: none;
+        border: none;
+        color: white;
+        padding: 0;
+        text-decoration: underline;
+        font-size: 15px;
+      }
+      @media screen and (min-width:474px) {
+        #donation-splash-skip {
+          margin-left: 15px;
+        }
+      }
+      @media screen and (min-width:900px) {
+        #donation-splash-skip {
+          margin-left: 0;
+        }
+      }
+      @media screen and (min-width:1060px) {
+        #donation-splash-skip {
+          margin-left: 15px;
+        }
+      }
+      .splash-buttons p {
+        max-width: 179px;
+        text-align:center;
+        font-size: 15px;
+      }
+      @media screen and (max-width:719px) {
+        #donation-splash-skip {
+          padding-left: 0;
+        }
+      }
+      #jump-to-form {
+        display: none;
+      }
+      @media screen and (min-width:373px) {
+        #action-lead {
+          padding: 16vw 12vw;
+        }
+      }
+      @media screen and (min-width:720px) {
+        #action-lead.bg-blue-fade {
+          background-color: transparent;
+          background-image: linear-gradient(270.76deg, rgba(15, 129, 233, 0) 26.32%, rgba(15, 129, 233, 0.54) 48.94%, #0D6AC0 74.65%, #0B5AA3 99.33%);
+        }
+        #action-lead {
+          padding: 17vh 16vw;
+        }
+      }
+      @media only screen and (min-width:900px) {
+        #action-lead {
+          padding: calc(12 * (1vw + 1vh - 1vmin));
+        }
+      }
+    </style>
+    <script>
+      (function() {
+        $(function(){
+          $('#donation-splash-next').on('click', function(){
+            $('.splash-buttons').hide();
+            $('.ak-donate-three-step, #action-toc').show();
+          });
+          $('.close-donation-splash-modal').on('click', function(){
+            window.parent.postMessage({
+              'type': 'close-splash-modal'
+            }, '*');
+          });
+        });
+        $(window).load(function(){
+          window.parent.postMessage({
+            'type': 'splash-modal-ready'
+          }, '*');
+        });
+      })();
+    </script>
+  {% endif %}
 
 {% comment %}If "layout" is *not* set to "expanded", end the title <div> here, after the description <div>.{% endcomment %}
 {% if page.custom_fields.page_layout_style != 'expanded' %}
@@ -1128,6 +1224,8 @@ iframe[width="1"][height="1"] {
       });
 
     function scroll_to_top_of_box() {
+      var splashPage = '{{ page.custom_fields.donation_splash_page }}';
+      if (splashPage === 'Y') return;
       //Gets top of three step box
       console.log("Scroll to top of box is called")
       var top_of_three_step_box = $('.ak-field-box.ak-donate-three-step').offset().top;
