Fix privact optin and optout

--- a/privacy.html
+++ b/privacy.html
@@ -57,15 +57,12 @@
 
     <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio-group text-lineheight-small text-small">
       <div class="input-radio">
-        <label for="privacy_optin">
         <input type="radio" name="privacy" id="privacy_optin" value="{{pt.radio_optin_hash}}">
-		{{pt.radio_optin|safe}}</label>
+        <label for="privacy_optin">{{pt.radio_optin|safe}}</label>
       </div>
       <div class="input-radio">
-        <label for="privacy_optout">
         <input type="radio" name="privacy" id="privacy_optout" value="{{pt.radio_optout_hash}}">
-		{{pt.radio_optout|safe}}
-		</label>
+        <label for="privacy_optout">{{pt.radio_optout|safe}}</label>
       </div>
     </div>
 
