Restore changes as wthey were initially

--- a/privacy.html
+++ b/privacy.html
@@ -59,6 +59,8 @@
       <div class="input-radio">
         <input type="radio" name="privacy" id="privacy_optin" value="{{pt.radio_optin_hash}}">
         <label for="privacy_optin">{{pt.radio_optin|safe}}</label>
+      </div>
+      <div class="input-radio">
         <input type="radio" name="privacy" id="privacy_optout" value="{{pt.radio_optout_hash}}">
         <label for="privacy_optout">{{pt.radio_optout|safe}}</label>
       </div>
