Fix full width toggle for meetings vs webinars

--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -27,8 +27,10 @@
     </div> {% endcomment %}
     </div>
     {% if not update %}
+    <div>
     <button class="zoom-btn" id="add-webinar-link">Add Webinar Link</button>
     <button class="zoom-btn" id="add-meeting-link">Add Meeting Link</button>
+    </div>
     <p class="text-small opacity-80 underline" id="toggle-meeting">
         Add Meeting Instead?
     </p>
